--- a/WebNI/WebNI.vcxproj.filters
+++ b/WebNI/WebNI.vcxproj.filters
@@ -15,4 +15,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ConnectionState.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
