1. Add NIModule tfor all OpenNI and NiTE code 2. Add test HTML

--- a/WebNI/WebNI.vcxproj
+++ b/WebNI/WebNI.vcxproj
@@ -85,9 +85,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="NIModule.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConnectionState.h" />
+    <ClInclude Include="NIModule.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="SkeletonCanvas.html" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
