--- a/webNIServer/PathSetting.props
+++ b/webNIServer/PathSetting.props
@@ -2,9 +2,9 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros">
-    <BOOST_INCLUDE>..\..\boost153\</BOOST_INCLUDE>
-    <BOOST_LIB>..\..\boost153\stage\lib</BOOST_LIB>
-    <BOOST_LIB64>..\..\boost153\stage\lib64</BOOST_LIB64>
+    <BOOST_INCLUDE>..\..\boost_1_54_0\</BOOST_INCLUDE>
+    <BOOST_LIB>..\..\boost_1_54_0\stage\lib</BOOST_LIB>
+    <BOOST_LIB64>..\..\boost_1_54_0\stage\lib64</BOOST_LIB64>
     <WEBSOCKETPP_INCLUDE>..\..\websocketpp</WEBSOCKETPP_INCLUDE>
   </PropertyGroup>
   <PropertyGroup />
